--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,3 +1,34 @@
 /* CSS Document */
 
-.fac-constructor-field .iris-picker { position: absolute; }
+.fac-constructor-field .iris-picker { position: absolute; z-index: 10000; }
+
+.fac-constructor-wrapper { overflow: hidden; width: 100%; }
+.fac-constructor-wrapper .faccw-column { float: left; width: 60%; }
+.fac-constructor-wrapper .faccw-preview { width: 40%; }
+.faccw-preview-area { padding: 0 0 0 20px; } 
+
+.fac-constructor-preview-container { border: 1px solid #ddd; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07) inset; min-height: 50px; padding: 20px; text-align: center; }
+
+a.fac-hint { width: 22px; height: 22px; font-size: 22px!important; line-height: 22px!important; padding: 0 0 0 5px; }
+a.fac-hint.fac-color-hint { line-height: 20px!important; padding: 0; }
+p.fac-note { display: none; position: absolute; z-index: 10000; background: #fff; width: 200px; }
+
+.fac-constructor-field label { display: block; padding: 5px 0; font-weight: bold; }
+.fac-constructor-field .fac-hint { display: inline-block; vertical-align: top; }
+
+.widefat.fac-element { width: 90%; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
