--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -97,3 +97,10 @@ olor-hint {
     margin: 0 3px 0
 }
 
+/*----- Type Notice -----*/
+.fac-constructor-params .fac-description {
+    width: 90%;
+    font-size: 12px;
+    color: #b4b9be;
+    padding: 3px 5px;
+}
