--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -104,3 +104,7 @@ olor-hint {
     color: #b4b9be;
     padding: 3px 5px;
 }
+
+
+#fac_sliders .ui-sortable tr { cursor: pointer; }
+#fac_sliders .ui-sortable tr:hover { background: rgba(244,251,17,0.45); } 
