--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@
 
 .fac-dropdown-template {
     border: 1px solid #263238; 
-    background: #fff url("http://i62.tinypic.com/15xvbd5.png") no-repeat scroll 319px center;
+    background: #fff url("../images/dropdown.png") no-repeat scroll 319px center;
     border-radius: 6px; 
     text-align: center;     
     overflow: hidden;
